third_party/blink/renderer/core/animation/keyframe_effect_test.cc
@@ -346,22 +346,26 @@ TEST_F(KeyframeEffectTest, TimeToEffectChange) {
   Animation* animation = GetDocument().Timeline().Play(keyframe_effect);
   double inf = std::numeric_limits<double>::infinity();
 
+  // Beginning of the animation.
   EXPECT_EQ(100, keyframe_effect->TimeToForwardsEffectChange());
   EXPECT_EQ(inf, keyframe_effect->TimeToReverseEffectChange());
 
+  // End of the before phase.
   animation->SetCurrentTimeInternal(100);
   EXPECT_EQ(100, keyframe_effect->TimeToForwardsEffectChange());
   EXPECT_EQ(0, keyframe_effect->TimeToReverseEffectChange());
 
+  // Nearing the end of the active phase.
   animation->SetCurrentTimeInternal(199);
   EXPECT_EQ(1, keyframe_effect->TimeToForwardsEffectChange());
   EXPECT_EQ(0, keyframe_effect->TimeToReverseEffectChange());
 
+  // End of the active phase.
   animation->SetCurrentTimeInternal(200);
-  // End-exclusive.
-  EXPECT_EQ(inf, keyframe_effect->TimeToForwardsEffectChange());
+  EXPECT_EQ(100, keyframe_effect->TimeToForwardsEffectChange());
   EXPECT_EQ(0, keyframe_effect->TimeToReverseEffectChange());
 
+  // End of the animation.
   animation->SetCurrentTimeInternal(300);
   EXPECT_EQ(inf, keyframe_effect->TimeToForwardsEffectChange());
   EXPECT_EQ(100, keyframe_effect->TimeToReverseEffectChange());
